--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,1 +1,5 @@
-HELLO CONTAINERISED WORLD!
+<img src="/assets/james.png" />
+
+<p>
+  Hi. My name is James and I'm a Ruby and JavaScript developer.
+</p>
