--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,5 +1,60 @@
-<img src="/assets/james.png" />
+<h1>James C Russell <span class="small">Ruby and JavaScript developer</span></h1>
+
+<div class="header">
+  <img src="/assets/james.png" class="img-rounded" align="left" width="100" />
+
+  <p class="lead">
+    Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>. I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
+    <br>
+    Understand this and that and something more.
+  </p>
+</div>
 
 <p>
-  Hi. My name is James and I'm a Ruby and JavaScript developer.
+  I've been using <strong>Ruby for {{rubyYears}} years</strong>, <strong>JavaScript for {{jsYears}} years</strong> and <strong>Angular.js for {{angularYears}} years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
+
+  For me programming is <strong>an art and a creation</strong>. I enjoy designing IT systems and implementing them.
 </p>
+
+<p>
+  My story
+</p>
+
+my values (simlicity)
+
+<p>
+  So why should you hire me? I'm surprised how many companies suck at hiring. Being a great developer is given
+</p>
+Doing worthwhile work
+love startups
+see it from both sides, don't screw with that library and get shit done
+
+<p>
+  Don't ask me if I worked with this or that database. It doesn't matter, because I'll learn it quickly. That's ultimately what programming is about: learning quickly.
+self-starter
+</p>
+
+<p class="bg-info">
+  There's a lot of myths about contractors out there. I don't understand why.
+  From my experience, contractors are usually the most knowledgeable people.
+</p>
+
+<p>
+  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I strongly believe ...
+
+  £475 which is only <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>.
+</p>
+
+<a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
+
+<h2>Testimonials</h2>
+
+<blockquote>
+  <img src="/assets/maciek.jpg" class="img-rounded" align="left" width="100" />
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore corporis voluptatum provident eos libero doloribus, aspernatur error nisi repellat eaque! Cupiditate autem, eligendi debitis sed aliquid minus facere, maiores nostrum.
+  </p>
+  <footer>Maciej Palinsky, colleague from NotOnTheHighStreet.com.</footer>
+</blockquote>
+
+<a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
