--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -6,33 +6,75 @@
   <p class="lead">
     Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>. I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
     <br>
-    Understand this and that and something more.
+    <mark>I love start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
+    <br>
   </p>
 </div>
 
 <p>
-  I've been using <strong>Ruby for {{rubyYears}} years</strong>, <strong>JavaScript for {{jsYears}} years</strong> and <strong>Angular.js for {{angularYears}} years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
+  I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
 
-  For me programming is <strong>an art and a creation</strong>. I enjoy designing IT systems and implementing them.
+  For me programming is <strong>an art and a creation process</strong>. I enjoy designing IT systems and implementing them.
 </p>
 
 <p>
-  My story
+  I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time.
 </p>
 
-my values (simlicity)
+<p>
+  <strong>I love working in start-ups</strong>, because I enjoy the atmosphere, cumulation of smart people and the fact that I found it's the best place to do something meaningful. I'm closely following the start-up community and I've done a few <abbr title="Calling them start-ups would be too fancy.">side projects</abbr> myself, so I'm familiar with what's going on, from lean start-up to metrics &amp; growth hacking.
+</p>
+
+<h2>My values</h2>
+<p>
+  I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <mark>IT</mark>, <mark>start-ups</mark> and <mark>self-development</mark>.
+</p>
 
 <p>
+  I love <strong><abbr title="Open-source software.">OSS</abbr></strong>. I've released many projects for public use and I contributed to OSS of others, rSpec and RubyGems among others.
+</p>
+
+<p>
+  I believe in <strong>simplicity</strong>. In start-ups it's important to deliver fast. Complicated systems take long to develop and maintain.
+</p>
+
+<p>
+  I want to do <strong>worthwhile work</strong>, to contribute to something meaningful. I don't take on any project, just because it "pays the bills".
+</p>
+
+<h2>Why should you hire me?</h2>
+<!-- encourage dreams -->
+<p>
+  Finding great, responsible developers who understand your business requirements is possible.
+</p>
+
+<!-- calm their fears -->
+<p>
+</p>
+
+<!-- confirm their suspicions -->
+<p>
+</p>
+
+<!-- justify their failures -->
+<p>
+</p>
+
+<!-- help to throw rocks on their enemies -->
+<p>
+</p>
+
+<!-- <p>
   So why should you hire me? I'm surprised how many companies suck at hiring. Being a great developer is given
 </p>
-Doing worthwhile work
-love startups
 see it from both sides, don't screw with that library and get shit done
 
 <p>
   Don't ask me if I worked with this or that database. It doesn't matter, because I'll learn it quickly. That's ultimately what programming is about: learning quickly.
 self-starter
-</p>
+</p> -->
+
+<!-- remote work -->
 
 <p class="bg-info">
   There's a lot of myths about contractors out there. I don't understand why.
@@ -40,9 +82,11 @@ self-starter
 </p>
 
 <p>
-  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I strongly believe ...
+  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the median rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
+</p>
 
-  £475 which is only <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>.
+<p>
+  I also discount my remote work by 20% to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves my time and expenses.
 </p>
 
 <a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
