Agular.js added.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,4 +1,4 @@
-<h1>James C Russell <span class="small">Ruby and JavaScript developer</span></h1>
+<h1>James C Russell <span class="small">Ruby, JavaScript &amp; Angular.js developer</span></h1>
 
 <div class="header">
   <img src="/assets/james.png" class="img-rounded" align="left" width="100" />
