Whops, I mispelled Maciek's surname.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -98,7 +98,7 @@ self-starter
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore corporis voluptatum provident eos libero doloribus, aspernatur error nisi repellat eaque! Cupiditate autem, eligendi debitis sed aliquid minus facere, maiores nostrum.
   </p>
-  <footer>Maciej Palinsky, colleague from NotOnTheHighStreet.com.</footer>
+  <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
 </blockquote>
 
 <a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
