Maciek's testimonial. Thank you again @palin!

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -96,7 +96,7 @@ self-starter
 <blockquote>
   <img src="/assets/maciek.jpg" class="img-rounded" align="left" width="100" />
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore corporis voluptatum provident eos libero doloribus, aspernatur error nisi repellat eaque! Cupiditate autem, eligendi debitis sed aliquid minus facere, maiores nostrum.
+    I had the pleasure of working with James at NotOnTheHighStreet.com. He is really knowledgeable about technologies. Positive attitude, problem-solving skills, key technologies suggestions - to name just a few of many of his attributes and skills. He is passionate about his work and if you think about someone who can help you in any stage of your project - you think about James.
   </p>
   <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
 </blockquote>
