Let's use the avg.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,4 +1,8 @@
-<h1>James C Russell <span class="small">Ruby, JavaScript &amp; Angular.js developer</span></h1>
+<h1>
+  James C Russell
+  <small class="default">Ruby, JavaScript &amp; Angular.js developer</small>
+  <small class="mobile-portrait">Ruby &amp; JavaScript developer</small>
+</h1>
 
 <div class="header">
   <img src="/assets/james.png" class="img-rounded" align="left" width="100" />
@@ -13,8 +17,18 @@
 
 <p>
   I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
+</p>
 
+<p>
+  There are many great developers out there, but not every developer will understand your business.
+</p>
+
+<p>
   For me programming is <strong>an art and a creation process</strong>. I enjoy designing IT systems and implementing them.
+</p>
+
+<p>
+  <em>"Why the hell is it important?"</em>, you might be wondering.
 </p>
 
 <p>
@@ -82,7 +96,7 @@ self-starter
 </p>
 
 <p>
-  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the median rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
+  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
 </p>
 
 <p>
