Email template for convenience.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -103,7 +103,7 @@ self-starter
   I also discount my remote work by 20% to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves my time and expenses.
 </p>
 
-<a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
+<a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
 
 <h2>Testimonials</h2>
 
@@ -115,4 +115,4 @@ self-starter
   <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
 </blockquote>
 
-<a role="button" href="mailto:contracts@101ideas.cz" class="btn btn-lg btn-success">Get in touch now!</a>
+<a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
