--- a/content/app.css
+++ b/content/app.css
@@ -10,11 +10,17 @@ h1 .mobile-portrait { display: none; }
 
 @media (max-width: 768px) and (orientation: landscape) {
   h1 .default { display: block; padding: 7px 0; }
+  a[role=button] { margin-left: auto; margin-right: auto; display: block; }
 }
 
 @media (max-width: 768px) and (orientation: portrait) {
   h1 .mobile-portrait { display: block; padding: 9px 0; }
   h1 .default { display: none; }
+  a[role=button] { margin-left: auto; margin-right: auto; display: block; }
+}
+
+blockquote p {
+  font-style: italic;
 }
 
 /* Display error in case AngularJS app hasn't load */
