Some copywriting magic.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -15,10 +15,16 @@
   </p>
 </div>
 
+<h3>I'm a top-notch developer ...</h3>
 <p>
   I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
 </p>
 
+<p>
+  I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time and I've been doing it ever since.
+</p>
+
+<h3>You need to ask yourself the right questions ...</h3>
 <p>
   There are many great developers out there, but not every developer will understand your business.
 </p>
@@ -39,7 +45,20 @@
   <strong>I love working in start-ups</strong>, because I enjoy the atmosphere, cumulation of smart people and the fact that I found it's the best place to do something meaningful. I'm closely following the start-up community and I've done a few <abbr title="Calling them start-ups would be too fancy.">side projects</abbr> myself, so I'm familiar with what's going on, from lean start-up to metrics &amp; growth hacking.
 </p>
 
-<h2>My values</h2>
+<h3>I don't work for everyone ...</h3>
+<p>
+  The only way I can make sure I'm delivering the best results consistently over time is being selective about the projects I'm working on.
+</p>
+
+<p>
+  Best case scenario of course is inspiring company culture, exciting product, super-smart team and great code.
+</p>
+
+<p>
+  Nothing is ever perfect, but as long as I can give myself a good reason why should I get up in the morning and go to work on your project, then I'm interested. Otherwise ... life's too short, I'm sorry!
+</p>
+
+<h3>What are my values?</h3>
 <p>
   I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <mark>IT</mark>, <mark>start-ups</mark> and <mark>self-development</mark>.
 </p>
@@ -56,54 +75,24 @@
   I want to do <strong>worthwhile work</strong>, to contribute to something meaningful. I don't take on any project, just because it "pays the bills".
 </p>
 
-<h2>Why should you hire me?</h2>
-<!-- encourage dreams -->
 <p>
-  Finding great, responsible developers who understand your business requirements is possible.
+  Does your company have similar values? <a href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" >Get in touch now!</a>
 </p>
 
-<!-- calm their fears -->
-<p>
-</p>
-
-<!-- confirm their suspicions -->
-<p>
-</p>
-
-<!-- justify their failures -->
-<p>
-</p>
-
-<!-- help to throw rocks on their enemies -->
-<p>
-</p>
-
-<!-- <p>
-  So why should you hire me? I'm surprised how many companies suck at hiring. Being a great developer is given
-</p>
-see it from both sides, don't screw with that library and get shit done
-
-<p>
-  Don't ask me if I worked with this or that database. It doesn't matter, because I'll learn it quickly. That's ultimately what programming is about: learning quickly.
-self-starter
-</p> -->
-
-<!-- remote work -->
-
+<h3>Why contractors are good for your company?</h3>
 <p class="bg-info">
   There's a lot of myths about contractors out there. I don't understand why.
   From my experience, contractors are usually the most knowledgeable people.
 </p>
 
+<h3>My rate is affordable ...</h3>
 <p>
-  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
+  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is merely <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
 </p>
 
 <p>
   I also discount my remote work by 20% to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves my time and expenses.
 </p>
-
-<a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
 
 <h2>Testimonials</h2>
 
