--- a/content/app.css
+++ b/content/app.css
@@ -3,6 +3,13 @@ body > footer { padding-bottom: 70px; }
 .header p.lead { padding: 0 0 20px 110px; }
 blockquote p, blockquote footer { padding-left: 120px; }
 .image { padding: 20px; }
+h3 {
+  color: #707070;
+  font-style: italic;
+  font-size: 18px;
+  margin: 5px 0;
+  padding: 5px 0;
+}
 
 /* Mobile */
 h1 .default { display: inline; }
