--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -10,7 +10,7 @@
   <p class="lead">
     Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>. I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
     <br>
-    <mark>I love start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
+    <mark>I ♥ start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
     <br>
   </p>
 </div>
@@ -35,10 +35,6 @@
 
 <p>
   <em>"Why the hell is it important?"</em>, you might be wondering.
-</p>
-
-<p>
-  I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time.
 </p>
 
 <p>
