--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -8,7 +8,8 @@
   <img src="/assets/james.png" class="img-rounded" align="left" width="100" />
 
   <p class="lead">
-    Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>. I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
+    Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>.<br>
+    I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
     <br>
     <mark>I ♥ start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
     <br>
