--- a/content/app.css
+++ b/content/app.css
@@ -59,35 +59,6 @@ blockquote p {
 }
 
 /* Footer. */
-body > footer {
-  width: 100%;
-  height: 175px;
-  padding-top: 15px;
-
-  /*position: absolute;*/
-  bottom: 0px;
-
-  background-color: #f5f5f5;
-  border-top: 1px solid #e5e5e5;
-  z-index: 100;
-}
-
-body > footer .footer {
-  width: 45%;
-  float: left;
-  margin: 0 0 0 33%;
-  padding-top: 50px;
-  text-align: center;
-  background-size: 50px auto;
-}
-
-/*
-
-Sticky Footer by Ryan Fait
-http://ryanfait.com/
-
-*/
-
 * {
   margin: 0;
 }
@@ -95,13 +66,27 @@ http://ryanfait.com/
 html, body {
   height: 100%;
 }
-.container {
+
+.container, .container-fluid {
   min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -175px; /* the bottom margin is the negative value of the footer's height */
+  margin: 0 auto -105px; /* the bottom margin is the negative value of the footer's height */
 }
 
 body > footer, .push {
-  height: 175px; /* .push must be the same height as .footer */
+  height: 155px; /* '.push' must be the same height as 'footer' */
 }
+
+body > footer {
+  background-color: #f5f5f5;
+}
+
+/*@media (min-width: 768px) {*/
+  body > footer .footer {
+    /*width: 33.333%;*/
+    /*float: left;*/
+    /*margin: 0 0 0 33%;*/
+    padding-top: 50px;
+    text-align: center;
+    background-size: 50px auto;
+  }
+/*}*/
