--- a/content/app.css
+++ b/content/app.css
@@ -1,5 +1,4 @@
-body > nav { padding-top: 20px; }
-body > footer { padding-bottom: 70px; }
+nav { padding-top: 20px; }
 .header p.lead { padding: 0 0 20px 110px; }
 blockquote p, blockquote footer { padding-left: 120px; }
 .image { padding: 20px; }
@@ -80,13 +79,8 @@ body > footer {
   background-color: #f5f5f5;
 }
 
-/*@media (min-width: 768px) {*/
-  body > footer .footer {
-    /*width: 33.333%;*/
-    /*float: left;*/
-    /*margin: 0 0 0 33%;*/
-    padding-top: 50px;
-    text-align: center;
-    background-size: 50px auto;
-  }
-/*}*/
+body > footer .footer {
+  padding-top: 50px;
+  text-align: center;
+  background-size: 50px auto;
+}
