--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -25,11 +25,12 @@
   I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time and I've been doing it ever since.
 </p>
 
-<h3>You need to ask yourself the right questions ...</h3>
+<h3>But we both know that being only a great developer is <strong>not</strong> enough ...</h3>
 <p>
   There are many great developers out there, but not every developer will understand your business.
 </p>
 
+<h3>You need to ask yourself the right questions ...</h3>
 <p>
   For me programming is <strong>an art and a creation process</strong>. I enjoy designing IT systems and implementing them.
 </p>
@@ -73,8 +74,12 @@
 </p>
 
 <p>
-  Does your company have similar values? <a href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" >Get in touch now!</a>
+  Does your company have similar values?
 </p>
+
+<div class="center">
+  <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+</div>
 
 <h3>Why contractors are good for your company?</h3>
 <p class="bg-info">
@@ -88,7 +93,7 @@
 </p>
 
 <p>
-  I also discount my remote work by 20% to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves my time and expenses.
+  I also <mark>discount remote work by 20%</mark> to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves me time and expenses.
 </p>
 
 <h2>Testimonials</h2>
@@ -101,4 +106,26 @@
   <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
 </blockquote>
 
-<a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+<h2>About me</h2>
+<!-- <a href="/assets/nepal.jpg"> -->
+  <!-- <img src="/assets/nepal_preview.jpg" class="img-rounded" align="left" width="100"> -->
+<!-- </a> -->
+<div class="image">
+  <img src="/assets/nepal.jpg" class="img-rounded" align="left" width="100">
+</div>
+
+<p>
+  I love adventures and <strong>travelling</strong>. The picture on the left is from <abbr title="The Annapurna circuit.">Himalayas</abbr> where I cycled on my Brompton bike.
+</p>
+
+<p>
+  When I'm not travelling, I love to <strong>swim</strong>, <strong>play ping-pong</strong> and learn <abbr title="I'm currently learning Spanish, Mandarin is next.">languages</abbr>. I <strong>read</strong> a lot, mostly self-improvement books. I have a slight obsession with <strong>TED.com</strong> and <strong>Quora</strong>.
+</p>
+
+<p>
+  I try to live a healthy, balanced life. I'm crazy about <abbr title="Any Sencha tea makes me happy.">green tea</abbr> and I also do <strong>yoga</strong> and <strong>meditation</strong>, something that changed my life and I can't <abbr title="Try the Headspace app, great guided meditation app.">recommend</abbr> enough.
+</p>
+
+<div class="center">
+  <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+</div>
