--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -16,116 +16,141 @@
   </p>
 </div>
 
-<h3>I'm a top-notch developer ...</h3>
-<p>
-  I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>. I love programming and <strong>I have {{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> project</strong> on GitHub.
-</p>
-
-<p>
-  I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time and I've been doing it ever since.
-</p>
-
-<h3>But we both know that being only a great developer is <strong>not</strong> enough ...</h3>
-<p>
-  There are many great developers out there, but not every developer will understand your business.
-</p>
-
-<h3>You need to ask yourself the right questions ...</h3>
-<p>
-  For me programming is <strong>an art and a creation process</strong>. I enjoy designing IT systems and implementing them.
-</p>
-
-<p>
-  <em>"Why the hell is it important?"</em>, you might be wondering.
-</p>
-
-<p>
-  <strong>I love working in start-ups</strong>, because I enjoy the atmosphere, cumulation of smart people and the fact that I found it's the best place to do something meaningful. I'm closely following the start-up community and I've done a few <abbr title="Calling them start-ups would be too fancy.">side projects</abbr> myself, so I'm familiar with what's going on, from lean start-up to metrics &amp; growth hacking.
-</p>
-
-<h3>I don't work for everyone ...</h3>
-<p>
-  The only way I can make sure I'm delivering the best results consistently over time is being selective about the projects I'm working on.
-</p>
-
-<p>
-  Best case scenario of course is inspiring company culture, exciting product, super-smart team and great code.
-</p>
-
-<p>
-  Nothing is ever perfect, but as long as I can give myself a good reason why should I get up in the morning and go to work on your project, then I'm interested. Otherwise ... life's too short, I'm sorry!
-</p>
-
-<h3>What are my values?</h3>
-<p>
-  I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <mark>IT</mark>, <mark>start-ups</mark> and <mark>self-development</mark>.
-</p>
-
-<p>
-  I love <strong><abbr title="Open-source software.">OSS</abbr></strong>. I've released many projects for public use and I contributed to OSS of others, rSpec and RubyGems among others.
-</p>
-
-<p>
-  I believe in <strong>simplicity</strong>. In start-ups it's important to deliver fast. Complicated systems take long to develop and maintain.
-</p>
-
-<p>
-  I want to do <strong>worthwhile work</strong>, to contribute to something meaningful. I don't take on any project, just because it "pays the bills".
-</p>
-
-<p>
-  Does your company have similar values?
-</p>
-
-<div class="center">
-  <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
-</div>
-
-<h3>Why contractors are good for your company?</h3>
-<p class="bg-info">
-  There's a lot of myths about contractors out there. I don't understand why.
-  From my experience, contractors are usually the most knowledgeable people.
-</p>
-
-<h3>My rate is affordable ...</h3>
-<p>
-  Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is merely <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
-</p>
-
-<p>
-  I also <mark>discount remote work by 20%</mark> to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves me time and expenses.
-</p>
-
-<h2>Testimonials</h2>
-
-<blockquote>
-  <img src="/assets/maciek.jpg" class="img-rounded" align="left" width="100" />
+<div class="body">
+  <h3><i class="fa fa-check"></i> I'm a top-notch developer ...</h3>
   <p>
-    I had the pleasure of working with James at NotOnTheHighStreet.com. He is really knowledgeable about technologies. Positive attitude, problem-solving skills, key technologies suggestions - to name just a few of many of his attributes and skills. He is passionate about his work and if you think about someone who can help you in any stage of your project - you think about James.
+    I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>.
   </p>
-  <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
-</blockquote>
 
-<h2>About me</h2>
-<!-- <a href="/assets/nepal.jpg"> -->
-  <!-- <img src="/assets/nepal_preview.jpg" class="img-rounded" align="left" width="100"> -->
-<!-- </a> -->
-<div class="image">
-  <img src="/assets/nepal.jpg" class="img-rounded" align="left" width="100">
-</div>
+  <p>
+    I contributed to many well-known projects such as rSpec and RubyGems and I have <strong>{{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> projects</strong> of my own.
+  </p>
 
-<p>
-  I love adventures and <strong>travelling</strong>. The picture on the left is from <abbr title="The Annapurna circuit.">Himalayas</abbr> where I cycled on my Brompton bike.
-</p>
+  <p>
+    I fell in love with programming when I was 19. I quit my secondary school and pursued my passion full-time and I've been doing it ever since.
+  </p>
 
-<p>
-  When I'm not travelling, I love to <strong>swim</strong>, <strong>play ping-pong</strong> and learn <abbr title="I'm currently learning Spanish, Mandarin is next.">languages</abbr>. I <strong>read</strong> a lot, mostly self-improvement books. I have a slight obsession with <strong>TED.com</strong> and <strong>Quora</strong>.
-</p>
+  <h3 class="exclamation"><b>!</b> But we both know that being only a great developer is <strong>not</strong> enough ...</h3>
+  <p>
+    There are many great developers out there, but not every developer will understand your business.
+  </p>
 
-<p>
-  I try to live a healthy, balanced life. I'm crazy about <abbr title="Any Sencha tea makes me happy.">green tea</abbr> and I also do <strong>yoga</strong> and <strong>meditation</strong>, something that changed my life and I can't <abbr title="Try the Headspace app, great guided meditation app.">recommend</abbr> enough.
-</p>
+  <p class="highlight">
+    <strong>I tried to build a start-up twice</strong> and I failed. Bummer, I know, but <strong>it taught me many important lessons</strong> about business thinking, prioritisation, time management. If you say <abbr title="Minimal viable product">MVP</abbr>, I know what you're talking about. I know what growth hacking is. A/B testing, you name it!
+  </p>
 
-<div class="center">
-  <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+  <p>
+    If you're a very early stage start-up, I'm more than happy to help you out even out the scope of usual development: I'm comfortable talking to your customers and I'm more than happy being part of the wider process, designing the workflow and validating the ideas.
+  </p>
+
+  <h3><i class="fa fa-check"></i> I speak start-up ...</h3>
+  <p class="highlight">
+    I absolutely <strong>love start-ups</strong> and I'm passionate about creating products that change people's lives, because doing <strong>meaningful work</strong> is one of the most important things for me in my life.
+  </p>
+
+  <p>
+    Another big reason to be part of the start-up scene is that <strong>I love to be around smart people</strong> who have a purpose. I learnt so much from people who were smarter than me.
+  </p>
+
+  <!--
+  <p>
+    For me programming is <strong>an art and a creation process</strong>. I enjoy designing IT systems and implementing them.
+  </p>
+
+  <p>
+    <em>"Why the hell is it important?"</em>, you might be wondering.
+  </p>
+  -->
+
+  <h3>You need people who ask the right questions ...</h3>
+  <ul class="list-unstyled">
+    <li>I don't think in is-possible or not. I believe anything is possible, the question is what the opportunity cost is.</li>
+  </ul>
+
+  <h3 class="exclamation"><i class="fa fa-exclamation"></i> I don't work for everyone ...</h3>
+  <p>
+    The only way I can make sure I'm delivering the best results consistently over time is being selective about the projects I'm working on.
+  </p>
+
+  <p>
+    Best case scenario of course is inspiring company culture, exciting product, super-smart team and great code.
+  </p>
+
+  <p>
+    Nothing is ever perfect, but as long as I can give myself a good reason why should I get up in the morning and go to work on your project, then I'm interested. Otherwise ... life's too short, I'm sorry!
+  </p>
+
+  <h3>What are my values?</h3>
+  <p>
+    I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <mark>IT</mark>, <mark>start-ups</mark> and <mark>self-development</mark>.
+  </p>
+
+  <p>
+    I believe in <strong>simplicity</strong>. In start-ups it's important to deliver fast. Complicated systems take long to develop and maintain.
+  </p>
+
+  <p>
+    I want to do <strong>worthwhile work</strong>, to contribute to something meaningful. I don't take on any project, just because it "pays the bills".
+  </p>
+
+  <p>
+    Does your company have similar values?
+  </p>
+
+  <div class="text-center">
+    <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+  </div>
+
+  <h3>Why contractors are good for your company?</h3>
+  <p class="highlight">
+    There's a lot of myths about contractors out there. I don't understand why.
+    From my experience, contractors are usually the most knowledgeable people.
+  </p>
+
+  <h3><i class="fa fa-check"></i> My rate is affordable ...</h3>
+  <p>
+    Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is merely <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
+  </p>
+
+  <p>
+    I also <mark>discount remote work by 20%</mark> to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves me time and expenses.
+  </p>
+
+  <h2>Testimonials</h2>
+
+  <blockquote>
+    <img src="/assets/maciek.jpg" class="img-rounded" align="left" width="100" />
+    <p>
+      I had the pleasure of working with James at NotOnTheHighStreet.com. He is really knowledgeable about technologies. Positive attitude, problem-solving skills, key technologies suggestions - to name just a few of many of his attributes and skills. He is passionate about his work and if you think about someone who can help you in any stage of your project - you think about James.
+    </p>
+    <footer>Maciej Palinski, colleague from NotOnTheHighStreet.com.</footer>
+  </blockquote>
+
+  <h2>About me</h2>
+  <!-- <a href="/assets/nepal.jpg"> -->
+    <!-- <img src="/assets/nepal_preview.jpg" class="img-rounded" align="left" width="100"> -->
+  <!-- </a> -->
+  <div class="image">
+    <img src="/assets/nepal.jpg" class="img-rounded" align="left" width="100">
+  </div>
+
+  <p>
+    I love adventures and <strong>travelling</strong>. The picture on the left is from <abbr title="The Annapurna circuit.">Himalayas</abbr> where I cycled on my Brompton bike.
+  </p>
+
+  <p>
+    When I'm not travelling, I love to <strong>swim</strong>, <strong>play ping-pong</strong> and learn <abbr title="I'm currently learning Spanish, Mandarin is next.">languages</abbr>. I <strong>read</strong> a lot, mostly <strong>self-improvement</strong> books. I have a slight obsession with <strong>TED.com</strong> and <strong>Quora</strong>.
+  </p>
+
+  <p>
+    I do a lot of <strong>programming</strong> and learning about programming AND <strong>start-ups</strong> in my spare time. I'm grateful I can do something I'm passionate about as my carrier. When I'm <u>not</u> working on any client projects, I'm working on <a href="http://pay-per-task.com/">PayPerTask.com</a>, which changes the way how you incentivise and pay your developers.
+  </p>
+
+  <p>
+    I try to live a healthy, balanced life. I'm crazy about <abbr title="Any Sencha tea makes me happy.">green tea</abbr> and I also do <strong>yoga</strong> and <strong>meditation</strong>, something that changed my life and I can't <abbr title="Try the Headspace app, great guided meditation app.">recommend</abbr> enough.
+  </p>
+
+  <div class="text-center">
+    <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
+  </div>
 </div>
